# farmers-eye-pytorch

./: .gitignore  README.md  colab_example.ipynb  models.py  notebook.ipynb  preprocess_transform.py  pyproject.toml  retrain.py  test_data_balanced.py  train.py  train_data.py  train_vit.py  train_vit_b_16.py  train_vit_h_14.py
2 - Run model/: retrain.py
outputs_mobilenet/csv/: metrics_20250712_162315_mobilenet_v2.csv
outputs_resnet/csv/: metrics_20250711_022743_resnet50.csv  metrics_20250711_041635_resnet50.csv  metrics_20250711_060520_resnet50.csv  metrics_20250711_075523_resnet50.csv  metrics_20250711_202001_resnet50.csv  metrics_20250712_122349_resnet50.csv  metrics_20250712_193535_resnet50.csv  metrics_20250712_213059_resnet50.csv  metrics_20250712_232715_resnet50.csv
outputs_vit/csv/: metrics_20250625_001202_vit_base_patch16_224.csv  metrics_20250625_011530_vit_base_patch16_224.csv  metrics_20250625_012818_vit_base_patch16_224.csv  metrics_20250625_014457_vit_base_patch16_224.csv  metrics_20250625_033820_vit_base_patch16_224.csv  metrics_20250625_050825_vit_base_patch16_224.csv  metrics_20250625_063841_vit_base_patch16_224.csv  metrics_20250625_080903_vit_base_patch16_224.csv  metrics_20250630_013628_vit_base_patch16_224.csv  metrics_20250630_040700_vit_base_patch16_224.csv  metrics_20250630_063640_vit_base_patch16_224.csv  metrics_20250630_091410_vit_base_patch16_224.csv  metrics_20250630_114203_vit_base_patch16_224.csv  metrics_20250630_175645_vit_base_patch16_224.csv  metrics_20250630_202854_vit_base_patch16_224.csv  metrics_20250701_024505_vit_base_patch16_224.csv  metrics_20250701_051642_vit_base_patch16_224.csv  metrics_20250701_110232_vit_base_patch16_224.csv  metrics_20250701_125256_vit_base_patch16_224.csv  metrics_20250708_232422_vit_base_patch16_224.csv  metrics_20250709_015447_vit_base_patch16_224.csv  metrics_20250709_042618_vit_base_patch16_224.csv  metrics_20250709_065701_vit_base_patch16_224.csv  metrics_20250709_173244_vit_base_patch16_224.csv  metrics_20250709_195853_vit_base_patch16_224.csv  metrics_20250709_222544_vit_base_patch16_224.csv  metrics_20250710_005156_vit_base_patch16_224.csv  metrics_20250710_095552_vit_base_patch16_224.csv  metrics_20250710_123440_vit_base_patch16_224.csv  metrics_20250710_150559_vit_base_patch16_224.csv  metrics_20250711_112344_vit_base_patch16_224.csv  metrics_20250713_022545_vit_base_patch16_224.csv
plots/: plotting.ipynb
runs/Jun01_21-04-21_Kowolski/: events.out.tfevents.1748804661.Kowolski.23196.0
runs/Jun01_21-04-40_Kowolski/: events.out.tfevents.1748804680.Kowolski.16012.0
runs/Jun01_21-22-04_Kowolski/: events.out.tfevents.1748805724.Kowolski.10964.0
runs/Jun01_21-22-12_Kowolski/: events.out.tfevents.1748805732.Kowolski.12708.0
runs/Jun01_21-32-48_Kowolski/: events.out.tfevents.1748806368.Kowolski.17520.0
