[project]
name = "farmers-eye-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2.3",
  "tensorboard>=2.19.0",
  "timm>=1.0.15",
  "tqdm>=4.67.1",
  "matplotlib>=3.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

# use uv sync --extra 'rocm63'

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "triton>=3.3.0; sys_platform == 'linux'",
  "triton-windows>=3.3.1.post19; sys_platform== 'win32'",
]
cu128 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "triton>=3.3.0; sys_platform == 'linux'",
  "triton-windows>=3.3.1.post19; sys_platform== 'win32'",
]
rocm63 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "pytorch-triton-rocm>=2.1.0",
]
rocm64 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "pytorch-triton-rocm>=2.1.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "rocm63" },
    { extra = "rocm64" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-rocm63", extra = "rocm63" },
  { index = "pytorch-rocm64", extra = "rocm64" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-rocm63", extra = "rocm63" },
  { index = "pytorch-rocm64", extra = "rocm64" },
]

pytorch-triton-rocm = [
  { index = "pytorch-rocm63", extra = "rocm63" },
  { index = "pytorch-rocm64", extra = "rocm64" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm63"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/nightly/rocm6.4"
explicit = true
